created the log in page onlu for desktop please insert the phone css on next commit

--- a/phone.css
+++ b/phone.css
@@ -11,6 +11,21 @@ footer .socialLinks ul li {
   padding: 5px 5px;
   margin: 15px 15px;
 }
+.navbar ::before {
+  content: "";
+  /*background: url(https://images.unsplash.com/photo-1571902943202-507ec2618e8f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1075&q=80)
+    no-repeat center center/cover;*/
+  background-color: black;
+  position: absolute;
+  top: 0px;
+
+  right: 0px;
+  height: 100%;
+  width: 100%;
+  margin: auto 0;
+  z-index: -1;
+  opacity: 0.1;
+}
 .navbar {
   flex-direction: column;
 }
