--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  color: rgb(74, 74, 74);
 }
 .navbar {
   display: flex;
@@ -76,6 +77,11 @@
 #headAndBody h1 {
   text-align: center;
 }
+#headAndBody .secondary-heading {
+  font-size: 1.3rem;
+  opacity: 0.8;
+  color: grey;
+}
 
 #headAndBody .images {
   display: flex;
@@ -102,8 +108,10 @@
   content: "";
   background-color: black;
   position: absolute;
+  align-items: center;
   height: 30%;
-  width: 98%;
+  width: 100%;
+  right: 0px;
   z-index: -1;
   opacity: 0.1;
 }
@@ -173,6 +181,12 @@ footer h1 {
   margin-bottom: 15px;
   margin-top: 15px;
   color: white;
+}
+footer p {
+  color: white;
+  margin-top: 55px;
+  opacity: 0.5;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 footer ul {
   display: flex;
